--- a/Cookie clicker/index.html
+++ b/Cookie clicker/index.html
@@ -53,7 +53,7 @@
         </div>
         
         <div class="footer">
-            <p>Klik op de zonnebloem om meer te kweken!</p>
+            <p>Klik op de zonnebloem om meer te kweken!!</p>
         </div>
     </div>
     
