kleine update themas

--- a/Cookie clicker/index.html
+++ b/Cookie clicker/index.html
@@ -38,9 +38,21 @@
         <div class="lightning lightning1"></div>
         <div class="lightning lightning2"></div>
         <div class="lightning lightning3"></div>
-        <div class="rain rain1"></div>
-        <div class="rain rain2"></div>
-        <div class="rain rain3"></div>
+        <div class="raindrop raindrop1"></div>
+        <div class="raindrop raindrop2"></div>
+        <div class="raindrop raindrop3"></div>
+        <div class="raindrop raindrop4"></div>
+        <div class="raindrop raindrop5"></div>
+        <div class="raindrop raindrop6"></div>
+        <div class="raindrop raindrop7"></div>
+        <div class="raindrop raindrop8"></div>
+        <div class="raindrop raindrop9"></div>
+        <div class="raindrop raindrop10"></div>
+        <div class="raindrop raindrop11"></div>
+        <div class="raindrop raindrop12"></div>
+        <div class="raindrop raindrop13"></div>
+        <div class="raindrop raindrop14"></div>
+        <div class="raindrop raindrop15"></div>
         <div class="storm-fog"></div>
     </div>
    
@@ -56,6 +68,21 @@
         <div class="shooting-star shooting-star3"></div>
         <div class="shooting-star shooting-star4"></div>
         <div class="shooting-star shooting-star5"></div>
+        <div class="shooting-star shooting-star6"></div>
+        <div class="shooting-star shooting-star7"></div>
+        <div class="shooting-star shooting-star8"></div>
+        <div class="shooting-star shooting-star9"></div>
+        <div class="shooting-star shooting-star10"></div>
+        <div class="shooting-star shooting-star11"></div>
+        <div class="shooting-star shooting-star12"></div>
+        <div class="shooting-star shooting-star13"></div>
+        <div class="shooting-star shooting-star14"></div>
+        <div class="shooting-star shooting-star15"></div>
+        <div class="shooting-star shooting-star16"></div>
+        <div class="shooting-star shooting-star17"></div>
+        <div class="shooting-star shooting-star18"></div>
+        <div class="shooting-star shooting-star19"></div>
+        <div class="shooting-star shooting-star20"></div>
         <div class="moon"></div>
     </div>
    
