themas aangepast multiypler toegevoegd per thema nu ook te unlocken

--- a/Cookie clicker/index.html
+++ b/Cookie clicker/index.html
@@ -496,30 +496,47 @@
                         </div>
                     </div>
                 </div>
-               
+                
                 <div class="unlocks-container">
                     <h2 class="unlocks-title">Thema's</h2>
                     <div class="unlocks-list">
                         <div class="unlock-item" id="storm-unlock">
                             <span class="unlock-icon">⛈️</span>
-                            <span class="unlock-name">Storm Thema</span>
-                            <span class="unlock-status">100 zonnebloemen</span>
+                            <div class="unlock-info">
+                                <span class="unlock-name">Storm Thema</span>
+                                <span class="unlock-description">+2x click multiplier</span>
+                            </div>
+                            <div class="unlock-purchase">
+                                <span class="unlock-cost">100 🌻</span>
+                                <button class="purchase-btn" onclick="purchaseTheme('storm')" disabled>Koop</button>
+                            </div>
                         </div>
                         <div class="unlock-item" id="night-unlock">
                             <span class="unlock-icon">🌙</span>
-                            <span class="unlock-name">Nacht Thema</span>
-                            <span class="unlock-status">250 zonnebloemen</span>
+                            <div class="unlock-info">
+                                <span class="unlock-name">Nacht Thema</span>
+                                <span class="unlock-description">+4x click multiplier</span>
+                            </div>
+                            <div class="unlock-purchase">
+                                <span class="unlock-cost">250 🌻</span>
+                                <button class="purchase-btn" onclick="purchaseTheme('night')" disabled>Koop</button>
+                            </div>
                         </div>
                         <div class="unlock-item" id="autumn-unlock">
                             <span class="unlock-icon">🍂</span>
-                            <span class="unlock-name">Herfst Thema</span>
-                            <span class="unlock-status">500 zonnebloemen</span>
+                            <div class="unlock-info">
+                                <span class="unlock-name">Herfst Thema</span>
+                                <span class="unlock-description">+8x click multiplier</span>
+                            </div>
+                            <div class="unlock-purchase">
+                                <span class="unlock-cost">500 🌻</span>
+                                <button class="purchase-btn" onclick="purchaseTheme('autumn')" disabled>Koop</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
  
     <script src="script.js"></script>
 </body>
