2 upgrades van de tuinwinkel werkend, autoclicker en +1 met een click

--- a/Cookie clicker/index.html
+++ b/Cookie clicker/index.html
@@ -504,7 +504,7 @@
                             <span class="unlock-icon">⛈️</span>
                             <div class="unlock-info">
                                 <span class="unlock-name">Storm Thema</span>
-                                <span class="unlock-description">+2x click multiplier</span>
+                                <span class="unlock-description">+2x click multiplier (wanneer actief)</span>
                             </div>
                             <div class="unlock-purchase">
                                 <span class="unlock-cost">100 🌻</span>
@@ -515,7 +515,7 @@
                             <span class="unlock-icon">🌙</span>
                             <div class="unlock-info">
                                 <span class="unlock-name">Nacht Thema</span>
-                                <span class="unlock-description">+4x click multiplier</span>
+                                <span class="unlock-description">+4x click multiplier (wanneer actief)</span>
                             </div>
                             <div class="unlock-purchase">
                                 <span class="unlock-cost">250 🌻</span>
@@ -526,7 +526,7 @@
                             <span class="unlock-icon">🍂</span>
                             <div class="unlock-info">
                                 <span class="unlock-name">Herfst Thema</span>
-                                <span class="unlock-description">+8x click multiplier</span>
+                                <span class="unlock-description">+8x click multiplier (wanneer actief)</span>
                             </div>
                             <div class="unlock-purchase">
                                 <span class="unlock-cost">500 🌻</span>
