Achievenement systeem bijgewerkt volledig werkend

--- a/Cookie clicker/index.html
+++ b/Cookie clicker/index.html
@@ -183,10 +183,10 @@
         <h3 class="achievements-panel-title">🏆 Achievements</h3>
         <div class="achievements-grid">
             <div class="achievement-item" id="achievement-first-click" data-achieved="false">
-                <span class="achievement-icon">🌱</span>
+                <span class="achievement-icon">👆</span>
                 <div class="achievement-info">
-                    <span class="achievement-name">Eerste Groei</span>
-                    <span class="achievement-description">Klik je eerste zonnebloem</span>
+                    <span class="achievement-name">Eerste Klik</span>
+                    <span class="achievement-description">Klik voor de eerste keer op de zonnebloem</span>
                 </div>
                 <span class="achievement-status"></span>
             </div>
@@ -199,42 +199,18 @@
                 <span class="achievement-status"></span>
             </div>
             <div class="achievement-item" id="achievement-click-master" data-achieved="false">
-                <span class="achievement-icon">🔥</span>
+                <span class="achievement-icon">🖱️</span>
                 <div class="achievement-info">
                     <span class="achievement-name">Klik Meester</span>
-                    <span class="achievement-description">Klik 500 keer op de zonnebloem</span>
+                    <span class="achievement-description">Klik 500 keer</span>
                 </div>
                 <span class="achievement-status"></span>
             </div>
             <div class="achievement-item" id="achievement-thousand-stars" data-achieved="false">
-                <span class="achievement-icon">🌟</span>
+                <span class="achievement-icon">⭐</span>
                 <div class="achievement-info">
                     <span class="achievement-name">Duizend Sterren</span>
                     <span class="achievement-description">Verzamel 1000 zonnebloemen</span>
-                </div>
-                <span class="achievement-status"></span>
-            </div>
-            <div class="achievement-item" id="achievement-fast-fingers" data-achieved="false">
-                <span class="achievement-icon">⚡</span>
-                <div class="achievement-info">
-                    <span class="achievement-name">Snelle Vingers</span>
-                    <span class="achievement-description">Klik 10 keer binnen 5 seconden</span>
-                </div>
-                <span class="achievement-status"></span>
-            </div>
-            <div class="achievement-item" id="achievement-theme-collector" data-achieved="false">
-                <span class="achievement-icon">🎨</span>
-                <div class="achievement-info">
-                    <span class="achievement-name">Thema Verzamelaar</span>
-                    <span class="achievement-description">Ontgrendel alle 4 thema's</span>
-                </div>
-                <span class="achievement-status"></span>
-            </div>
-            <div class="achievement-item" id="achievement-shopaholic" data-achieved="false">
-                <span class="achievement-icon">🏪</span>
-                <div class="achievement-info">
-                    <span class="achievement-name">Shopaholic</span>
-                    <span class="achievement-description">Koop je eerste upgrade</span>
                 </div>
                 <span class="achievement-status"></span>
             </div>
@@ -250,15 +226,23 @@
                 <span class="achievement-icon">👑</span>
                 <div class="achievement-info">
                     <span class="achievement-name">Klik Koning</span>
-                    <span class="achievement-description">Klik 2000 keer totaal</span>
+                    <span class="achievement-description">Klik 2000 keer</span>
                 </div>
                 <span class="achievement-status"></span>
             </div>
-            <div class="achievement-item" id="achievement-perfectionist" data-achieved="false">
-                <span class="achievement-icon">🎯</span>
+            <div class="achievement-item" id="achievement-mega-collector" data-achieved="false">
+                <span class="achievement-icon">🏆</span>
                 <div class="achievement-info">
-                    <span class="achievement-name">Perfectionist</span>
-                    <span class="achievement-description">Koop alle beschikbare upgrades</span>
+                    <span class="achievement-name">Mega Verzamelaar</span>
+                    <span class="achievement-description">Verzamel 10000 zonnebloemen</span>
+                </div>
+                <span class="achievement-status"></span>
+            </div>
+            <div class="achievement-item" id="achievement-click-legend" data-achieved="false">
+                <span class="achievement-icon">🌟</span>
+                <div class="achievement-info">
+                    <span class="achievement-name">Klik Legende</span>
+                    <span class="achievement-description">Klik 5000 keer</span>
                 </div>
                 <span class="achievement-status"></span>
             </div>
