themas kunnen nu unlocked worden door spelers

--- a/Cookie clicker/index.html
+++ b/Cookie clicker/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zonnebloem Kweker</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="theme-controls">
         <input type="radio" name="theme" id="theme-default" checked>
-        <input type="radio" name="theme" id="theme-storm" class="theme-locked">
-        <input type="radio" name="theme" id="theme-night" class="theme-locked">
-        <input type="radio" name="theme" id="theme-autumn" class="theme-locked">
+        <input type="radio" name="theme" id="theme-storm" class="theme-locked" disabled>
+        <input type="radio" name="theme" id="theme-night" class="theme-locked" disabled>
+        <input type="radio" name="theme" id="theme-autumn" class="theme-locked" disabled>
        
 
         <input type="checkbox" id="unlock-storm" class="unlock-checkbox">
         <input type="checkbox" id="unlock-night" class="unlock-checkbox">
         <input type="checkbox" id="unlock-autumn" class="unlock-checkbox">
+{{ ... }}
     </div>
    
    
